--- a/Showtimes.Domain.Tests/Showtimes.Domain.Tests.csproj
+++ b/Showtimes.Domain.Tests/Showtimes.Domain.Tests.csproj
@@ -53,6 +53,12 @@
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Showtimes.Domain\Showtimes.Domain.csproj">
+      <Project>{17281524-6fc4-401d-9c6e-418f76989f49}</Project>
+      <Name>Showtimes.Domain</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
