--- a/Showtimes.Domain/Showtimes.Domain.csproj
+++ b/Showtimes.Domain/Showtimes.Domain.csproj
@@ -53,6 +53,7 @@
     <Compile Include="MovieTheater.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Showtimes.cs" />
+    <Compile Include="ShowtimesContext.cs" />
     <Compile Include="ShowtimesSchedulingService.cs" />
   </ItemGroup>
   <ItemGroup>
