--- a/Showtimes.Domain/Showtimes.Domain.csproj
+++ b/Showtimes.Domain/Showtimes.Domain.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Movie.cs" />
     <Compile Include="MovieTheater.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository.cs" />
     <Compile Include="Showtimes.cs" />
     <Compile Include="ShowtimesContext.cs" />
     <Compile Include="ShowtimesSchedulingService.cs" />
